# titik

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  build.sh  install.sh  test.example.md  version.json
src-agent/: Cargo.toml
src-agent/src/: cli.rs  config.rs  main.rs  resources.rs
src-agent/src/app/: awareness.rs  harness.rs  mod.rs  mode.rs  resolve.rs  runtime.rs  state.rs  update.rs  version.rs
src-agent/src/app/bgbash/: mod.rs
src-agent/src/app/mcp/: mod.rs
src-agent/src/app/mode/: editor.rs  effort.rs  key_input.rs  live_picker.rs  loading.rs  mod.rs  picker.rs  quit_confirm.rs  rewind.rs  session_hub.rs
src-agent/src/app/runtime/: actions.rs  client.rs  client_shadow.rs  commands.rs  event_loop.rs  lifecycle.rs  manage.rs  mod.rs  session_mgmt.rs  shortsend.rs  signals.rs  stream.rs  terminal.rs
src-agent/src/app/sec/: mod.rs
src-agent/src/app/state/: input.rs  misc.rs  mod.rs  rest.rs  runtime.rs  scroll.rs  stream.rs  types.rs
src-agent/src/app/subagent/: context.rs  engine.rs  event.rs  mod.rs  spawn.rs
src-agent/src/controller/: command.rs  input.rs  mod.rs
src-agent/src/controller/input/: action.rs  agents.rs  bash.rs  chat.rs  clipboard.rs  help.rs  key_input.rs  live_picker.rs  mcp.rs  mod.rs  paste.rs  picker.rs  (+6 more)
src-agent/src/dto/: chat.rs  mod.rs  openrouter.rs
src-agent/src/internet/: mod.rs
src-agent/src/ipc/: client.rs  conn.rs  frame.rs  mod.rs  proto.rs  selftest.rs  server.rs  snapshot.rs
src-agent/src/model/: agent_def.rs  app_config.rs  attachment.rs  catalogue.rs  conversation.rs  memory.rs  mod.rs  msglog.rs  session.rs  session_lock.rs  session_registry.rs  settings.rs  store.rs  usage.rs
src-agent/src/security/: mod.rs
src-agent/src/service/: mod.rs  openrouter.rs
src-agent/src/tool/: cd.rs  dircache.rs  fs.rs  git_cred.rs  git_operator.rs  git_worktree.rs  memory.rs  mod.rs  pong.rs  search.rs  shell.rs  task.rs
src-agent/src/view/: agents.rs  chat.rs  effort.rs  help.rs  key_input.rs  live_session_picker.rs  loading.rs  markdown.rs  message_rewind.rs  mod.rs  quit_confirm.rs  session_hub.rs  session_picker.rs  settings.rs  theme.rs
(+265 files in other folders)
