[package]
name = "agent"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ratatui = "0.30.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
dom_smoothie = "0.18.0"
fast_html2md = "0.0.62"
scraper = "0.27.0"
url = "2"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.9"
anyhow = "1"
include_dir = "0.7"
uuid = { version = "1", features = ["v4", "v5"] }
dirs = "5"
futures-util = "0.3"
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
regex = "1"
globset = "0.4"
infer = "0.16"
base64 = "0.22"

[[bin]]
name = "koma"
path = "src/main.rs"
